--- a/Navino/app/src/main/res/values/strings.xml
+++ b/Navino/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">DA</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Navino</string>
 </resources>
